<resources>
    <string name="app_name">UrbanClapClone</string>
    <string name="enter_email">Enter your email.</string>
    <string name="enter_password">Enter your password</string>
    <string name="show_password">Show password</string>
    <string name="enter_name">Enter your name</string>
    <string name="create_account">Sign Up</string>
    <string name="user_phone_num">Enter your phone number</string>
    <string name="enter_id">Enter your skill.</string>
</resources>