<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#a9e5ff"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="Seller Signup"
        android:layout_above="@id/sign_up_card"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_card"
        android:layout_centerVertical="true"
        app:cardElevation="15dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/create_name"
                android:layout_width="350dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="5dp"
                android:layout_height="50dp"
                android:hint="@string/enter_name"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/user_profession"
                android:layout_width="350dp"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_skill"
                android:drawablePadding="5dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_id"
                android:layout_gravity="center_horizontal"
                />


            <EditText
                android:id="@+id/create_email"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/create_password"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_below="@id/create_email"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/create_phone_num"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/user_phone_num"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:inputType="phone"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="5dp"/>
            <CheckBox
                android:id="@+id/sign_up_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/show_password" />

            <Button
                android:id="@+id/create"
                android:layout_width="249dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_radius"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="17sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>